k8s/plane/ingress/ingress-plane.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-plane
  namespace: plane
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: plane.luis122448.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
  tls:
  - hosts:
    - plane.luis122448.com
    secretName: plane-luis122448-com-tls
